# avalanche

./: .env.example  .gitignore  CLAUDE.md  Makefile  PRIVACY-POLICY-TEMPLATE.md  README.md  RELEASE.md  dev-invite.py  dev.py
.claude/commands/: done.md  new-app-error.md  new-bot.md  new-db-module.md  new-db-test.md  new-doc.md  new-e2e-test.md  new-feature.md  new-ffi-method.md  new-group-action.md  new-http-test.md  new-message-type.md  new-middleware.md  new-migration.md  new-onboarding-step.md  new-proptest.md  new-rate-limit-action.md  new-route.md  new-swift-model.md  new-view.md  new-ws-message.md  track-upstream-ios-parity-gaps.md  uidebug.md  update-feature-parity.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
core/: CLAUDE.md  Cargo.toml
core/crates/app-core/: Cargo.toml  build.rs
core/crates/app-core-node/: Cargo.toml
core/crates/app-core-node/src/: lib.rs
core/crates/app-core/src/: connection.rs  error.rs  groups.rs  lib.rs  messaging.rs  plc.rs  prekeys.rs  profile.rs  provisioning.rs  recovery.rs  storage_sync.rs
core/crates/app-core/tests/: e2e_account_lifecycle.rs  e2e_connection.rs  e2e_device_link.rs  e2e_dm.rs  e2e_group_ws_push.rs  e2e_groups.rs  e2e_prekeys.rs  e2e_storage.rs
core/crates/app-core/tests/common/: mod.rs
core/crates/crypto/: Cargo.toml
core/crates/crypto/src/: attachments.rs  ephemeral.rs  groups.rs  lib.rs  prekeys.rs  sealed_sender.rs
core/crates/crypto/src/groups/: credentials.rs  endorsements.rs  group_key.rs  server_params.rs
core/crates/federation/: Cargo.toml
core/crates/net/: Cargo.toml
core/crates/net/src/: error.rs  groups.rs  lib.rs  types.rs  ws.rs
core/crates/project-sdk/: Cargo.toml
core/crates/relay/: Cargo.toml  README.md
core/crates/relay/examples/: send_test_push.rs
core/crates/relay/src/: main.rs
core/crates/server/: Cargo.toml  build.rs
core/crates/server/src/: config.rs  error.rs  invite_token.rs  lib.rs  main.rs  plc.rs  state.rs
core/crates/server/src/db/: abuse.rs  accounts.rs  capabilities.rs  challenges.rs  devices.rs  directory.rs  group_messages.rs  groups.rs  ip_rate_limits.rs  mod.rs  oauth_grants.rs  prekeys.rs  profiles.rs  project_tokens.rs  projects.rs  push.rs  rate_limits.rs  server_events.rs  storage.rs  token_redemptions.rs  zkgroup_params.rs
core/crates/server/src/middleware/: auth.rs  client_ip.rs  mod.rs  rate_limit.rs
core/crates/server/src/routes/: abuse.rs  accounts.rs  admin.rs  auth.rs  avatar.rs  devices.rs  groups.rs  info.rs  invites.rs  key_rotation.rs  messages.rs  mod.rs  oauth.rs  prekeys.rs  profile.rs  projects.rs  push.rs  recovery.rs  registration.rs  storage.rs  websocket.rs
core/crates/server/src/tasks/: mod.rs
core/crates/server/tests/: db_tests.rs  group_tests.rs  http_tests.rs
core/crates/store/: Cargo.toml
core/crates/store/src/: account.rs  attachments.rs  avatars.rs  contacts.rs  conversations.rs  db.rs  error.rs  groups.rs  lib.rs  messages.rs  prekeys.rs  profiles.rs  push.rs  recovery.rs  schema.rs  session.rs  storage_sync.rs
core/crates/store/tests/: integration.rs  store_tests.rs
core/crates/test-utils/: Cargo.toml
core/crates/test-utils/src/: lib.rs
core/crates/testbot/: Cargo.toml
core/crates/testbot/src/: main.rs
core/crates/types/: Cargo.toml
core/proto/: content.proto  groups.proto  provisioning.proto  recovery.proto  ws.proto
design/: Avalanche Designs.sketch
design/MacOS App Icon.icon/: icon.json
design/avalanche_claude_code/: README.md
desktop/: CHECKLIST.md  CLAUDE.md  PLAN.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/scripts/: free-port.mjs
desktop/src/: App.css  App.tsx  bindings.ts  index.tsx
desktop/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/permissions/: actnet.toml  avalanche.toml
desktop/src-tauri/src/: ffi_types.rs  lib.rs  main.rs
docs/: 00-design.md  01-technical-implementation.md  02-todos-deferred.md  03-groups.md  04-multi-device.md  05-device-data-sync.md  06-identity-device-store-split.md  07-app-core-philosophy.md  10-server-implementation.md  11-core-api-sketch.md  12-abuse-handling.md  13-federation.md  14-bitchat-fallback.md  15-push-notifications.md  16-push-notification-service-extension.md  20-project-security.md  21-chatbot-project.md  22-adminbot.md  23-messaging-extensions.md  24-vetted-onboarding-project.md  25-project-login.md  30-mobile-ux.md  31-read-tracking.md  32-bitchat-fallback.md  33-android.md  33-identity-auth-recovery.md  33-reactions.md  34-connection-state.md  34-invite-tokens.md  35-attachments.md  35-contacts-and-profiles.md  36-message-editing-deletion.md  38-threading.md  39-reactions.md  40-deployment.md  41-relay-deployment.md  42-server-upgrades.md  50-identity-auth-recovery.md  51-invite-tokens.md  52-contacts-and-profiles.md  (+8 more)
docs/signal-research/: README.md  foreground-notifications.md  message-status-checkmark.md  profile-key-transmission.md
go.theavalanche.net/: package.json  wrangler.toml
go.theavalanche.net/public/: index.html
infra/: docker-compose.yml
infra/migrations/: 002_project_tokens.sql  004_auth_challenges.sql  005_one_time_kyber_prekeys.sql  006_recovery_blob.sql  007_profiles.sql  008_ip_rate_limit_counters.sql  010_groups.sql  011_group_messages.sql  012_key_rotation_log.sql  013_storage_items.sql  014_storage_snapshots.sql  015_projects.sql  016_token_redemptions.sql  017_server_events.sql  018_abuse_reports.sql  020_group_device_pseudonyms.sql  022_oauth_grants.sql  023_rename_accounts_read_capability.sql  024_directory_entries.sql
mobile/: CLAUDE.md
mobile/android/: .gitignore  release-sign.sh
mobile/ios/: ExportOptions.plist
node/: .gitignore  CLAUDE.md  package-lock.json  package.json  smoke.mjs
node/adminbot-state/: state.json  store.db-shm  store.db-wal
node/src/: index.ts
web/: .gitignore  package.json  wrangler.toml
web/content/: avdemo-privacy.md
web/layouts/: index.html
(+331 files in other folders)
