[workspace]
members = [
    "crates/types",
    "crates/crypto",
    "crates/store",
    "crates/net",
    "crates/app-core",
    "crates/server",
    "crates/relay",
    "crates/federation",
    "crates/project-sdk",
    "crates/test-utils",
    "crates/app-core-node",
]
resolver = "2"

[workspace.package]
# AGPL-3.0-only to match libsignal (our pinned crypto dependency). See LICENSE.
license = "AGPL-3.0-only"

[workspace.dependencies]
# Internal crates
types          = { path = "crates/types" }
crypto         = { path = "crates/crypto" }
store          = { path = "crates/store" }

# Cryptography
# Pinned to a specific commit for reproducible builds. Update deliberately.
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", rev = "4c460615cdbe4ed53b23a5d1bf71493514bf2a80" }
libsignal-core     = { git = "https://github.com/signalapp/libsignal", rev = "4c460615cdbe4ed53b23a5d1bf71493514bf2a80" }
# signal-crypto provides AES-256-CBC + HMAC-SHA-256 used for attachment blob
# encryption (docs/35-attachments.md) — Signal-exact, distinct from the
# AES-256-GCM the ratchet uses for messages. Same pinned commit.
signal-crypto      = { git = "https://github.com/signalapp/libsignal", rev = "4c460615cdbe4ed53b23a5d1bf71493514bf2a80" }
# zkgroup and zkcredential live in the same libsignal repo at the same pinned
# commit; they're the anonymous-credential primitives used by action-bound
# groups (see docs/03-groups.md).
zkgroup       = { git = "https://github.com/signalapp/libsignal", rev = "4c460615cdbe4ed53b23a5d1bf71493514bf2a80" }
zkcredential  = { git = "https://github.com/signalapp/libsignal", rev = "4c460615cdbe4ed53b23a5d1bf71493514bf2a80" }
# poksho's SHO is used directly in the credentials module to derive Ristretto
# points (and the DID encryption key) from public inputs. Same pinned commit.
poksho        = { git = "https://github.com/signalapp/libsignal", rev = "4c460615cdbe4ed53b23a5d1bf71493514bf2a80" }
# Exposed in `zkcredential::attributes::Attribute`'s public signature, so we
# need a direct dep to implement that trait. 4.1.3 is the version zkcredential
# pins; the workspace patch below rewrites it to the Signal fork.
curve25519-dalek = { version = "4.1.3", features = ["serde"] }
# Required for any type embedded inside zkcredential's `Credential` /
# `IssuanceProof` (they derive PartialDefault).
partial-default  = { version = "0.1", features = ["derive"] }
bincode          = "1.3"
rand = "0.9"
# p256, aes-gcm, sha2 are kept on the 0.x series that shares rand_core 0.6 with
# libsignal's pinned commit. Upgrading these to their latest (which uses rand_core
# 0.9) would not eliminate the split — libsignal would still pull in 0.6 — and
# would just add a *third* rand_core version to the graph.
p256        = { version = "0.13", features = ["ecdsa"] }
aes-gcm     = "0.10"
sha2        = "0.10"
# Standard Ed25519 for verifying Project-signed invite/registration tokens
# (docs/24 gatekeeper). Standard (not libsignal's XEd25519) so a future TS
# gatekeeper can sign with any off-the-shelf Ed25519 library. The server only
# verifies; test signing goes through `SigningKey::from_bytes` so we don't pull
# a second rand_core into the graph. Uses the same patched curve25519-dalek 4.x
# fork as zkgroup (API-compatible), so no diamond.
ed25519-dalek = "2"
# HMAC-SHA256 for deriving opaque storage record ids (docs/05 §4). digest 0.10
# family, matching sha2 0.10; no rand_core, so it doesn't widen the graph.
hmac        = "0.12"

# Async
tokio      = { version = "1", features = ["full"] }
async-trait = "0.1"

# Storage
# rusqlite is listed explicitly to control the bundled-sqlcipher feature.
# tokio-rusqlite wraps it with an async interface.
rusqlite       = { version = "0.31", features = ["bundled-sqlcipher", "hooks"] }
tokio-rusqlite = "0.5"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Server
axum        = { version = "0.8", features = ["ws"] }
axum-extra  = { version = "0.10", features = ["typed-header"] }
sqlx        = { version = "0.8.0", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "json", "migrate"] }
tower-http  = { version = "0.6", features = ["cors", "trace"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json  = "1"
base64      = "0.22"
base32      = "0.5"
bs58        = "0.5"
serde_ipld_dagcbor = "0.6"
time        = { version = "0.3", features = ["serde"] }

# FFI
uniffi = "0.29"

# Error handling
thiserror = "2"

# WebSocket client. `native-tls` matches reqwest's default TLS backend so
# the iOS binary ships one TLS stack (Apple Secure Transport via native-tls).
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
uuid  = { version = "1", features = ["v4", "serde"] }

# Testing
proptest = "1"

# zkgroup depends on a Signal fork of curve25519-dalek (it has private fields
# zkgroup needs to reach into for Ristretto-based proofs). The fork is API-
# compatible with crates.io 4.1.x for everything else. Without this patch,
# transitive dependencies pull in the upstream 4.1.3 and we get a diamond.
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }

# Strip symbols from linked release artifacts. Purely a size win at no runtime
# cost: the Android shared lib (libapp_core.so) drops ~24MB → ~18MB, and the
# server/relay binaries shrink too (the Makefile's manual `strip` becomes
# redundant). The iOS static lib (.a) is unaffected — Cargo doesn't strip
# staticlib archives; Xcode strips the final app.
[profile.release]
strip = true
