[package]
name    = "app-core-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
app-core = { path = "../app-core" }
napi        = { version = "2.16", default-features = false, features = ["napi6", "async", "tokio_rt"] }
napi-derive = "2.16"
tokio       = { workspace = true }

[build-dependencies]
napi-build = "2"
