[package]
name    = "app-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "app_core"

[dependencies]
types              = { workspace = true }
crypto             = { workspace = true }
store              = { workspace = true }
net                = { path = "../net" }
base64             = { workspace = true }
libsignal-protocol = { workspace = true }
rand               = { workspace = true }
thiserror          = { workspace = true }
uniffi             = { workspace = true, features = ["cli"] }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
prost              = "0.14"
p256               = { workspace = true }
aes-gcm            = { workspace = true }
sha2               = { workspace = true }
base32             = { workspace = true }
bs58               = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
reqwest            = { workspace = true }

[build-dependencies]
prost-build           = "0.14"
protoc-bin-vendored   = "3"

[dev-dependencies]
tokio = { workspace = true }
