[package]
name    = "app-core"
version = "0.1.0"
edition = "2021"
license.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "app_core"

[dependencies]
types              = { workspace = true }
crypto             = { workspace = true }
store              = { workspace = true }
net                = { path = "../net" }
base64             = { workspace = true }
libsignal-protocol = { workspace = true }
libsignal-core     = { workspace = true }
zkgroup            = { workspace = true }
rand               = { workspace = true }
thiserror          = { workspace = true }
uniffi             = { workspace = true, features = ["cli"] }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
prost              = "0.14"
bincode            = { workspace = true }
zkcredential       = { workspace = true }
uuid               = { workspace = true }
p256               = { workspace = true }
aes-gcm            = { workspace = true }
sha2               = { workspace = true }
hmac               = { workspace = true }
hkdf               = "0.12"
bip39              = "2"
async-trait        = { workspace = true }
base32             = { workspace = true }
bs58               = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
reqwest            = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
specta             = { version = "=2.0.0-rc.25", optional = true }

[features]
specta = ["dep:specta"]

# Android discards native stderr, so route tracing to logcat there (init_logging).
[target.'cfg(target_os = "android")'.dependencies]
paranoid-android = "0.2"

[build-dependencies]
prost-build           = "0.14"
protoc-bin-vendored   = "3"

[dev-dependencies]
tokio = { workspace = true }
proptest = { workspace = true }
