[package]
name    = "crypto"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
types              = { workspace = true }
libsignal-protocol = { workspace = true }
libsignal-core     = { workspace = true }
signal-crypto      = { workspace = true }
zkgroup            = { workspace = true }
zkcredential       = { workspace = true }
poksho             = { workspace = true }
curve25519-dalek   = { workspace = true }
partial-default    = { workspace = true }
serde              = { workspace = true }
bincode            = { workspace = true }
rand               = { workspace = true }
async-trait        = { workspace = true }
thiserror          = { workspace = true }
uuid               = { workspace = true }
sha2               = { workspace = true }

[dev-dependencies]
test-utils = { path = "../test-utils" }
tokio      = { workspace = true }
proptest   = { workspace = true }
