[package]
name    = "net"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest            = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
base64             = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true }
tokio-tungstenite  = { workspace = true }
futures-util       = { workspace = true }
prost              = "0.14"

[build-dependencies]
prost-build           = "0.14"
protoc-bin-vendored   = "3.0"
