[package]
name    = "relay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "actnet-relay"
path = "src/main.rs"

[dependencies]
axum        = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http         = { workspace = true }
reqwest          = { workspace = true }
rusqlite         = { workspace = true }
tokio-rusqlite   = { workspace = true }
