[package]
name    = "relay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "relay"
path = "src/main.rs"

[dependencies]
axum        = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http         = { workspace = true }
reqwest          = { workspace = true }
rusqlite         = { workspace = true }
tokio-rusqlite   = { workspace = true }
# `ring` instead of the default openssl feature so the relay binary has
# no C dependencies — clean musl static build for droplet deployment.
a2               = { version = "0.10", default-features = false, features = ["ring"] }

[[example]]
name = "send_test_push"
path = "examples/send_test_push.rs"
