[package]
name    = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "actnet-server"
path = "src/main.rs"

[dependencies]
types    = { workspace = true }

axum        = { workspace = true }
axum-extra  = { workspace = true }
sqlx        = { workspace = true }
tokio       = { workspace = true }
tower-http  = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
thiserror   = { workspace = true }
rand        = { workspace = true }
base64      = { workspace = true }
libsignal-protocol = { workspace = true }
time        = { workspace = true }
sha2        = { workspace = true }
base32      = { workspace = true }
reqwest     = { workspace = true }

[dev-dependencies]
tokio                = { workspace = true }
sqlx                 = { workspace = true }
serde_json           = { workspace = true }
base64               = { workspace = true }
libsignal-protocol   = { workspace = true }
rand                 = { workspace = true }
tower                = { version = "0.5", features = ["util"] }
http-body-util       = "0.1"
