[package]
name    = "testbot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "actnet-testbot"
path = "src/main.rs"

[dependencies]
app-core   = { path = "../app-core" }
store      = { workspace = true }
net        = { path = "../net" }
types      = { workspace = true }

axum       = { workspace = true }
tokio      = { workspace = true }
reqwest    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http         = { workspace = true }
base64     = { workspace = true }
